<resources>
    <string name="app_name">Gran Centre</string>
    <string name="btn1Text">Button 1</string>
    <string name="btn2Text">Button 2</string>
    <string name="btn3Text">Button 3</string>
    <string name="btn4Text">Button 4</string>
    <string name="btn5Text">Button 5</string>
    <string name="btn6Text">Button 6</string>
    <string name="restaurantText">Restaurants</string>
    <string name="businessText">Businesses</string>
    <string name="hotelText">Hotels</string>
    <string name="weatherText">Weather</string>
    <string name="movieText">Movies</string>
    <string name="parkingText">Parkings</string>
    <string name="settingsText">Settings</string>
    <string name="hotelCategoriaText">"Categoria de l'hotel: "</string>
    <string name="menuConfig1">Color de fons</string>
    <string name="menuConfig2">Mida de la lletra</string>
    <string name="menuConfig3">Color de la lletra</string>
    <string-array name="restaurantCategories">
        <item>Italià</item>
        <item>Japonès</item>
        <item>Vegetarià</item>
        <item>Marisc</item>
        <item>Chambersburg</item>
    </string-array>
    <string name="perruqueria1">BELLESA ESSENCIAL</string>
    <string name="perruqueria2">CARME ESTILISTES</string>
    <string name="perruqueria3">CAROL BRUGUERA</string>
    <string name="taller1">AUTORAPID MACOA</string>
    <string name="taller2">EUTRASA-PEUGEOT</string>
    <string name="taller3">PNEUMATICS TONICO</string>
    <string name="botiga1">EMAGINA</string>
    <string name="botiga2">FINETWORK GRANOLLERS</string>
    <string name="botiga3">SEO.BARCELONA</string>
    <string name="categoriesRestaurantsText">Categories de restaurants</string>
    <string name="hotel_item_name">Hotel name</string>
    <string name="hotel_item_address">Hotel address</string>
    <string name="hotel_image_description">Hotel image</string>
    <string name="hotel_name">Hotel name</string>
    <string name="address_icon">Address icon</string>
    <string name="hotel_address">Hotel address</string>
    <string name="category_icon">Category icon</string>
    <string name="hotel_category">Hotel category</string>
    <string name="link_icon">Link icon</string>
    <string name="hotel_web">Hotel web</string>
    <string name="phone_icon">Phone icon</string>
    <string name="hotel_phone">Hotel phone</string>
    <string name="valoracio_text">Hotel rating:</string>
    <string-array name="spinner_array">
        <item>Perruqueria</item>
        <item>Taller</item>
        <item>Botigues</item>
    </string-array>
    <string name="businessAdressPerruqueria1">23–25, Carrer de Corró, 08401 Granollers, Barcelona</string>
    <string name="businessAdressPerruqueria2">Carrer de Josep Torras I Bages, 35, 08401 Granollers, Barcelona</string>
    <string name="businessAdressPerruqueria3">Plaça Lluís Perpinyà, 4, 08400 Granollers, Barcelona</string>
    <string name="businessAdressTaller1">carrer del Mestre Josep M. Ruera, 25, 08401 Granollers, Barcelona</string>
    <string name="businessAdressTaller2">Plaça Porxada,19, 08401, Ganollers, Barcelona</string>
    <string name="businessAdressTaller3">Plaça Onze de Setembre, 13, 1r pis 08402 Granollers, Barcelona</string>
    <string name="businessAdressBotiga1">Ctra. Vallderiolf, S/N, 08430 Barcelona</string>
    <string name="businessAdressBotiga2">Carrer Catalunya, 39, 08520 Llerona, Barcelona</string>
    <string name="businessAdressBotiga3">Carrer de Foment, 29, 08400 Granollers, Barcelona</string>
    <string name="title_activity_parking_detail">ParkingDetail</string>
    <string name="parking_1_name">Parking 1</string>
    <string name="parking_1_total_places">Parking 1 total places</string>
    <string name="parking_1_available_places">Parking 1 available places</string>
    <string name="parking_2_name">Parking 2</string>
    <string name="parking_2_total_places">Parking 2 total places</string>
    <string name="parking_2_available_places">Parking 2 available places</string>
    <string name="parking_3_name">Parking 3</string>
    <string name="parking_3_total_places">Parking 3 total places</string>
    <string name="parking_3_available_places">Parking 3 available places</string>
    <string name="total_places_icon">total_places_icon</string>
    <string name="available_places_icon">available_places_icon</string>
    <string-array name="restaurantList">
        <item>Restaurant 1</item>
        <item>Restaurant 2</item>
        <item>Restaurant 3</item>
        <item>Restaurant 4</item>
    </string-array>


    <string name="restaurant_item_name">Medium Text</string>
    <string name="restaurant_item_address">TextView</string>
    <string name="restaurant_image_description">Restaurant image</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_category">Restaurant category</string>
    <string name="restaurant_web">Restaurant web</string>
    <string name="restaurant_phone">Restaurant phone</string>
    <string name="restaurant_valoracio">Restaurant rating:</string>


    <string-array name="weatherList">
        <item>Dilluns</item>
        <item>Dimarts</item>
        <item>Dimecres</item>
        <item>Dijous</item>
        <item>Divendres</item>
        <item>Dissabte</item>
        <item>Diumenge</item>
    </string-array>


    <string name="weather_item_name">Medium Text</string>
    <string name="weather_item_address">TextView</string>
    <string name="weather_image_description">Restaurant image</string>
    <string name="weather_name">Restaurant name</string>
    <string name="weather_address">Restaurant address</string>
    <string name="weather_category">Restaurant category</string>
    <string name="weather_web">Restaurant web</string>
    <string name="weather_phone">Restaurant phone</string>
    <string name="weather_valoracio">Restaurant rating:</string>
    <string name="rain_icon">rainIcon</string>
    <string name="dilluns">Dilluns</string>
    <string name="_21_c">21ºC</string>
    <string name="sun_icon">sunIcon</string>
    <string name="dimarts">Dimarts</string>
    <string name="_25_c">25ºC</string>
    <string name="windicon">windIcon</string>
    <string name="dimecres">Dimecres</string>
    <string name="_19_c">19ºC</string>
    <string name="stormicon">stormIcon</string>
    <string name="dijous">Dijous</string>
    <string name="divendres">Divendres</string>
    <string name="_17_c">17ºC</string>
    <string name="dissabte">Dissabte</string>
    <string name="diumenge">Diumenge</string>
    <string name="suncloudsicon">sunCloudsIcon</string>

    <string name="webPerruqueria1">https://www.bellesaessencial.com/</string>
    <string name="webPerruqueria2">https://www.facebook.com/carmenmerino72/</string>
    <string name="webPerruqueria3">https://carolbruguera.com/</string>
    <string name="webTaller1">https://redoficial.citroen.es/roca-del-valles</string>
    <string name="webTaller2">https://www.eutrasa.com/</string>
    <string name="webTaller3">http://tonico.cat/</string>
    <string name="webBotiga1">https://estabanell.com/particulars/telecomunicacions/</string>
    <string name="webBotiga2">https://www.finetwork.com/</string>
    <string name="webBotiga3">https://seo.barcelona/</string>
    <string name="wcp1">true</string>
    <string name="wcp2">true</string>
    <string name="wcp3">false</string>
    <string name="wct1">true</string>
    <string name="wct2">false</string>
    <string name="wct3">true</string>
    <string name="wcb1">false</string>
    <string name="wcb2">false</string>
    <string name="wcb3">true</string>

    <string-array name="horarisFnaf">
        <item>19:00 / 23:00</item>
        <item>18:00 / 21:00</item>
        <item>18:00 / 21:00</item>
        <item>16:00 / 21:00</item>
        <item>15:00 / 18:00</item>
        <item>18:00 / 22:00</item>
        <item>18:00 / 22:00</item>
    </string-array>
    <string-array name="horarisJuegos">
        <item>19:00 / 23:00</item>
        <item>18:00 / 21:00</item>
        <item>18:00 / 21:00</item>
        <item>16:00 / 21:00</item>
        <item>15:00 / 18:00</item>
        <item>18:00 / 22:00</item>
        <item>18:00 / 22:00</item>
    </string-array>
    <string-array name="horarisHypnotic">
        <item>19:00 / 23:00</item>
        <item>18:00 / 21:00</item>
        <item>18:00 / 21:00</item>
        <item>16:00 / 21:00</item>
        <item>15:00 / 18:00</item>
        <item>18:00 / 22:00</item>
        <item>18:00 / 22:00</item>
    </string-array>
    <string-array name="horarisMarvel">
        <item>19:00 / 23:00</item>
        <item>18:00 / 21:00</item>
        <item>18:00 / 21:00</item>
        <item>16:00 / 21:00</item>
        <item>15:00 / 18:00</item>
        <item>18:00 / 22:00</item>
        <item>18:00 / 22:00</item>
    </string-array>
    <string-array name="horarisPatrulla">
        <item>19:00 / 23:00</item>
        <item>18:00 / 21:00</item>
        <item>18:00 / 21:00</item>
        <item>16:00 / 21:00</item>
        <item>15:00 / 18:00</item>
        <item>18:00 / 22:00</item>
        <item>18:00 / 22:00</item>
    </string-array>
    <string-array name="phonePerruqueria">
        <item>938708807</item>
        <item>938706497</item>
        <item>938794016</item>
    </string-array>
    <string-array name="phoneTaller">
        <item>938790296</item>
        <item>938494100</item>
        <item>938793553</item>
    </string-array>
    <string-array name="phoneBotiga">
        <item>900828181</item>
        <item>938708807</item>
        <item>931303108</item>
    </string-array>
</resources>