<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelDetail"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageHotel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/hotel"
        android:background="@color/black"
        android:layout_weight="1"
        android:contentDescription="@string/hotel_image_description"
        android:scaleType="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:padding="17dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_name"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="7dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/location"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/address_icon" />
            <TextView
                android:id="@+id/hotelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="7dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/category"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_icon" />
            <TextView
                android:id="@+id/hotelCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_category"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="7dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/link"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/link_icon"/>
            <TextView
                android:id="@+id/hotelWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_web"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="7dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/phone_icon"/>
            <TextView
                android:id="@+id/hotelPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/valoracio_text"
                android:layout_weight="3"/>
            <RatingBar
                android:id="@+id/hotelRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>