<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelDetail"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageRestaurant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/restaurant"
        android:background="@color/black"
        android:layout_weight="1"
        android:contentDescription="@string/restaurant_image_description" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/location"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/address_icon" />
            <TextView
                android:id="@+id/restaurantAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/category"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_icon" />
            <TextView
                android:id="@+id/restaurantCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_category"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/link"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/link_icon"/>
            <TextView
                android:id="@+id/restaurantWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_web"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/phone_icon"/>
            <TextView
                android:id="@+id/restaurantPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_valoracio"
                android:layout_weight="3"/>
            <RatingBar
                android:id="@+id/restaurantRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>