<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="450dp"
    tools:context=".MainActivity"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn1Text"
                android:src="@drawable/restaurant"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn2Text"
                android:src="@drawable/business"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn3Text"
                android:src="@drawable/hotel"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn4Text"
                android:src="@drawable/weather"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn5Text"
                android:src="@drawable/movie"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:layout_margin="10dp"
                android:contentDescription="@string/btn6Text"
                android:src="@drawable/parking"/>
        </TableRow>
</TableLayout>