<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/weaterLayout"
    android:orientation="vertical"
    >

        <Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherText"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weather"
                    android:contentDescription="@string/weatherText"/>
            </LinearLayout>
        </Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <!-- DILLUNS -->
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/pluja"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/rain_icon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/dilluns"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_21_c" />

            </LinearLayout>

            <!-- DIMARTS -->
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/sol"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/sun_icon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/dimarts" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_25_c" />

            </LinearLayout>

            <!-- DIMECRES -->
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/vent"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/windicon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/dimecres" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_19_c" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/storm"
                    android:contentDescription="@string/stormicon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/dijous" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_19_c" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/pluja"
                    android:contentDescription="@string/rain_icon"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/divendres" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_17_c" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/vent"
                    android:contentDescription="@string/windicon"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/dissabte" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_19_c" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/weather_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/nuvolparcial"
                    android:contentDescription="@string/suncloudsicon"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/diumenge" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/_21_c" />

            </LinearLayout>
        </LinearLayout>
        </ScrollView>
</LinearLayout>
